# photokit

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  README_DEV.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
docs/: index.md  reference.md
examples/: watch.py
photokit/: __init__.py  album.py  asset.py  changeobserver.py  constants.py  exceptions.py  keyword.py  objc_utils.py  photokit.py  photolibrary.py  photosdb.py  scriptingbridge.py  unicode.py  utils.py
reference/: index.html
search/: search_index.json
tests/: README.md  conftest.py  test_000_photolibrary_single_mode.py  test_010_album.py  test_020_asset.py  test_0_photolibrary_single_mode.py  test_100_photolibrary_multi_mode.py  test_110_album_multi_mode.py  test_1_photolibrary_multi_mode.py
tests/assets/: test_live.HEIC  test_live.mov
