[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "photokit"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "pyobjc-core>=9.2,<11.0",
    "pyobjc-framework-AVFoundation>=9.2,<11.0",
    "pyobjc-framework-AppleScriptKit>=9.2,<11.0",
    "pyobjc-framework-AppleScriptObjC>=9.2,<11.0",
    "pyobjc-framework-Cocoa>=9.2,<11.0",
    "pyobjc-framework-CoreServices>=9.2,<11.0",
    "pyobjc-framework-Metal>=9.2,<11.0",
    "pyobjc-framework-Photos>=9.2,<11.0",
    "pyobjc-framework-Vision>=9.2,<11.0",
    "pyobjc-framework-ScriptingBridge>=9.2,<11.0",
    "wurlitzer>=3.0.3,<4.0.0",
]

[project.optional-dependencies]
dev = ["bump-my-version"]
test = ["pytest>=7.4.2", "pytest-cov", "osxphotos>=0.63.4"]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.13",
    "mkdocstrings-python>=0.8.3",
]

[project.urls]
Home = "https://github.com/RhetTbull/photokit"
Issues = "https://github.com/RhetTbull/photokit/issues"
Source = "https://github.com/RhetTbull/photokit"

[tool.flit.sdist]
exclude = ["site/**/*"]

[tool.bumpversion]
current_version = "0.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "photokit/__init__.py"
